added help functionality to api
